# brainfuck-toy

./: .gitattributes  .gitignore  Cargo.toml  README.md
bf/: hello_world.bf  life.bf  mandelbrot.bf
src/: interpreter.rs  interpreter_it.rs  jit.rs  jit_aarch64.rs  jit_x64.rs  lib.rs  main_interpreter.rs  main_interpreter_it.rs  main_jit.rs  opcode.rs
