[package]
name = "brainfuck-toy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "interpreter"
path = "src/main_interpreter.rs"

[[bin]]
name = "interpreter_it"
path = "src/main_interpreter_it.rs"

[[bin]]
name = "jit"
path = "src/main_jit.rs"

[dependencies]
once_cell = "1.10.0"
dynasm = "1.2.1"
dynasmrt = "1.2.1"
itertools = "*"
